--- a/app/views/signUp.scala.html
+++ b/app/views/signUp.scala.html
@@ -6,13 +6,13 @@
     <fieldset class="col-md-6 col-md-offset-3">
         <legend>Sign Up</legend>
         @helper.form(action = routes.AuthController.signUp()) {
-            @helper.inputText(signInForm("firstName"), '_hiddenLabel -> "First name", 'placeholder -> "First name", 'class -> "form-control input-lg")
-            @helper.inputText(signInForm("lastName"), '_hiddenLabel -> "Last name", 'placeholder -> "Last name", 'class -> "form-control input-lg")
-            @helper.inputText(signInForm("email"), '_hiddenLabel -> "Email address", 'placeholder -> "Email address", 'class -> "form-control input-lg")
-            @helper.inputPassword(signInForm("password"), '_hiddenLabel -> "Password", 'placeholder -> "Password", 'class -> "form-control input-lg")
+            @helper.inputText(signInForm("firstName"), '_showConstraints -> false, '_label -> "", '_hiddenLabel -> "First name", 'placeholder -> "First name", 'class -> "form-control input-lg")
+            @helper.inputText(signInForm("lastName"), '_showConstraints -> false, '_label -> "", '_hiddenLabel -> "Last name", 'placeholder -> "Last name", 'class -> "form-control input-lg")
+            @helper.inputText(signInForm("email"), '_showConstraints -> false, '_label -> "", '_hiddenLabel -> "Email address", 'placeholder -> "Email address", 'class -> "form-control input-lg")
+            @helper.inputPassword(signInForm("password"), '_showConstraints -> false, '_label -> "", '_hiddenLabel -> "Password", 'placeholder -> "Password", 'class -> "form-control input-lg")
             <div class="form-group">
                 <div>
-                    <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">Sign up</button>
+                    <input id="submit" type="submit" value="Sign Up" class="btn btn-lg btn-block"/>
                 </div>
             </div>
 
