--- a/app/views/calendar.scala.html
+++ b/app/views/calendar.scala.html
@@ -1,6 +1,7 @@
 
 @import services.Month
 @import controllers.security.User
+@import views.ViewHelper
 
 @(months: List[Month], users: List[User])(implicit user: Option[User])
 
@@ -25,9 +26,9 @@
                                 <div class="date">@day.formattedDate</div>
                                 @for(event <- day.events) {
                                     <div class="memo">
-                                        <label type="text" id="@day.dayId" onchange="sendMemo('@day.dayId')" onfocus="setFocus('@day.dayId')" ondblclick="alert('OK edit')" class="@event.colour">
+                                        <label type="text" id="@day.dayId" onchange="sendMemo('@day.dayId')" onfocus="setFocus('@day.dayId')" ondblclick="@{ViewHelper.getEvent(event.event)}" class="@event.colour">
                                             @if(event.legend.length > 15) {
-                                                @event.legend.take(10)...
+                                                @event.legend.take(15)...
                                             } else {
                                                 @event.legend
                                             }
@@ -66,7 +67,48 @@
                 </div>
 
                 <div class="modal-body">
-                    <input id="rehearsalLocation" name="rehearsalLocation" placeholder="Location" size="50"/>
+                    <input id="rehearsalLocation" name="rehearsalLocation" placeholder="Location" value="Mill Hill" size="50"/>
+                    <br>
+                    <input id="rehearsalStart" name="rehearsalStart" placeholder="Starts at" list="startTimes">
+                    <datalist id="startTimes">
+                        <option value="00:00">
+                        <option value="01:00">
+                        <option value="02:00">
+                        <option value="03:00">
+                        <option value="04:00">
+                        <option value="05:00">
+                        <option value="06:00">
+                        <option value="07:00">
+                        <option value="08:00">
+                        <option value="09:00">
+                        <option value="10:00">
+                        <option value="11:00">
+                        <option value="12:00">
+                        <option value="13:00">
+                        <option value="14:00">
+                        <option value="15:00">
+                        <option value="16:00">
+                        <option value="17:00">
+                        <option value="18:00">
+                        <option value="19:00">
+                        <option value="20:00">
+                        <option value="21:00">
+                        <option value="22:00">
+                        <option value="23:00">
+                    </datalist>
+                    <input id="rehearsalDuration" name="rehearsalDuration" placeholder="Length (hours)" list="durationTimes">
+                    <datalist id="durationTimes">
+                        <option value="1">
+                        <option value="2">
+                        <option value="3">
+                        <option value="4">
+                        <option value="5">
+                        <option value="6">
+                        <option value="7">
+                        <option value="8">
+                        <option value="9">
+                        <option value="10">
+                    </datalist>
                 </div>
 
                 <div class="modal-footer">
@@ -148,6 +190,109 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="btn button" id="submitModal" onclick="saveEvent('holiday')">Save holiday</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="editRehearsal" tabindex="-1" role="dialog" aria-labelledby="editRehearsal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title">Update Rehearsal</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <input id="rehearsalLocationEdit" name="rehearsalLocationEdit" placeholder="Location" size="50"/>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn button warning" id="deleteRehearsal">Delete</button>
+                    <button type="button" class="btn button" id="submitRehearsal">Update rehearsal</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="editGig" tabindex="-1" role="dialog" aria-labelledby="editGig" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title">Update Gig</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <input id="gigLocationEdit" name="gigLocationEdit" placeholder="Location" size="50"/>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn button warning" id="deleteGig">Delete</button>
+                    <button type="button" class="btn button" id="submitGig">Update gig</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="editMemo" tabindex="-1" role="dialog" aria-labelledby="editMemo" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title">Update Memo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <input id="memoEdit" name="memoEdit" size="50"/>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn button warning" id="deleteMemo">Delete</button>
+                    <button type="button" class="btn button" id="submitMemo">Update memo</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="editHoliday" tabindex="-1" role="dialog" aria-labelledby="editHoliday" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title">Update Holiday</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <select id="personEdit" name="personEdit" style="position: inherit; background: inherit; border: 0px">
+                        <option value="">select...</option>
+                        @for(user <- users) {
+                            <option value="@{user.userID}">@user.firstName @user.lastName</option>
+                        }
+                    </select><br>
+                    <input id="holidayStartEdit" type="date">
+                    <input id="holidayTillEdit" type="date">
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn button warning" id="deleteHoliday">Delete</button>
+                    <button type="button" class="btn button" id="submitHoliday">Update holiday</button>
                 </div>
 
             </div>
