--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,3 +41,20 @@ body {
 input[type="submit"] {
     background: #ffe472;
 }
+
+.warning {
+    background: lightpink;
+}
+
+.holidayLabel {
+    background-color: lightpink;
+}
+.gigLabel {
+    background-color: lightskyblue;
+}
+.rehearsalLabel {
+    background-color: yellowgreen;
+}
+.memoLabel {
+    background-color: sandybrown;
+}
