--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,22 +3,8 @@
 
 @main("Home") {
 
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
-    Hunderground opening site - @{user.map(_.firstName).getOrElse("shit")}
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
+ <div>
+   <img width="100%" src="@routes.Assets.versioned("images/cover.jpg")">
+ </div>
 
 }
