--- a/app/views/calendar.scala.html
+++ b/app/views/calendar.scala.html
@@ -36,7 +36,7 @@
                                     </div>
                                 }
                                 <div class="dropdown">
-                                    <button class="newEvent" data-toggle="dropdown"><i class="fa fa-plus"></i></button>
+                                    <button class="newEvent" id="newEvent@{day.dayId}" data-toggle="dropdown"><i class="fa fa-plus"></i></button>
                                     <ul class="dropdown-menu">
                                         <li onclick="addRehearsal('@day.dayId')"><label class="label rehearsalLabel">Rehearsal</label></li>
                                         <li onclick="addGig('@day.dayId')"><label class="label gigLabel">Gig</label></li>
