--- a/app/views/budgetUpdate.scala.html
+++ b/app/views/budgetUpdate.scala.html
@@ -18,7 +18,7 @@
 
 
             <fieldset style="margin-top: 30%">
-            @helper.form(action = routes.BudgetController.budget, 'id -> "budgetFormUpdate") {
+            @helper.form(action = routes.BudgetController.update, 'id -> "budgetFormUpdate") {
 
                 <div style="padding: 0px; margin: 0px">
                     <div style="float: left; padding-right: 20px">
