--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -41,7 +41,7 @@
                             <li><a class="btn btn-light btn-nav" href="/events">Events</a></li>
                             <li><a class="btn btn-light btn-nav" href="/budget">Budget</a></li>
                             <li><a class="btn btn-light btn-nav" href="/songList">Song List</a></li>
-                            <li><a class="btn btn-light btn-nav" href="/getCalendar">Calendar</a></li>
+                            <li><a class="btn btn-light btn-nav" href="/calendar">Calendar</a></li>
                             <li><a class="btn btn-light btn-nav" href="/signOut"><span class="glyphicon glyphicon-log-out"></span>Sign Out</a></li>
                             <li><a class="btn btn-light btn-nav" href="/changePassword">@{user.map(_.firstName).getOrElse("")}</a></li>
                         } else {
